--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <img width="400px" src="love2.jpg.jpg" alt="❤️">
     <footer>
         <h1><p> ❤️ I LOVE YOU DHARANI</p></h1>
-        <h1><a href="image folder" ,=""> 
+        <h1><a href="image folder/chella ponnu (1).jpg" ,="click "> 
           <img src="—Pngtree—neon love sign_5720861.png" alt="" width="500px">
          
          
